// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | TabsNav Integration: With react-router 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iopGic"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <ul
      className="TabsNav__StyledUl-sc-1vlwnet-1 iFoMqp Flexbox__StyledFlexbox-sc-1ob4g1e-0 cJYisf"
      direction="row"
    >
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lhwrhZ"
        >
          <a
            aria-current="page"
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route1"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 jOgXPf"
              height={11}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          <a
            aria-current={false}
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route2"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 hVZBrR"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
    />
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 iBOtCP"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | TabsNav Integration: With react-router and height modified 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iopGic"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <ul
      className="TabsNav__StyledUl-sc-1vlwnet-1 iFoMqp Flexbox__StyledFlexbox-sc-1ob4g1e-0 cJYisf"
      direction="row"
    >
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lhwrhZ"
        >
          <a
            aria-current="page"
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route1"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 jEUhAT"
              height={12}
            >
              Link to /route1
            </span>
          </a>
        </span>
      </li>
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          <a
            aria-current={false}
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route2"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 bLfRLp"
              height={12}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
    />
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 iBOtCP"
    >
      /route1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | TabsNav Integration: conditionally hide tab 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iopGic"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <ul
      className="TabsNav__StyledUl-sc-1vlwnet-1 iFoMqp Flexbox__StyledFlexbox-sc-1ob4g1e-0 cJYisf"
      direction="row"
    >
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          <a
            aria-current={false}
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route2"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 hVZBrR"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          <a
            aria-current={false}
            className="TabsNav__StyledLink-sc-1vlwnet-0 eonNTL"
            href="#/route3"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 hVZBrR"
              height={11}
            >
              <div>
                Link to /route2
              </div>
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
